--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "react": "^16.13.1",
+    "react-countdown-circle-timer": "^2.3.7",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
